--- a/narrative.html
+++ b/narrative.html
@@ -1,76 +1,142 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Narrative Portfolio – Emir Alhariri</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
-<style>
-    body {
-      background-color: #111;
-      color: white;
-      font-family: 'Inter', sans-serif;
-      margin: 0;
-      padding: 20px;
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Narrative · Emir Frantzen Alhariri</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet" />
+
+  <style>
+    /* same styles as index for consistency */
+    :root { --bg:#050505; --text:#f5f5f5; --muted:#b0b0b0; --line:#222; }
+    * { box-sizing:border-box; }
+    body { margin:0; background:var(--bg); color:var(--text); font-family:-apple-system,BlinkMacSystemFont,"Helvetica Neue",Arial,Inter,sans-serif; line-height:1.7; }
+    a { color:inherit; text-decoration:none; }
+    img { max-width:100%; display:block; }
+    .shell { max-width:1120px; margin:0 auto; padding:0 32px 80px; }
+
+    nav { position:sticky; top:0; z-index:10; background:rgba(5,5,5,0.96); backdrop-filter:blur(12px); border-bottom:1px solid rgba(255,255,255,0.03); }
+    .nav-inner { max-width:1120px; margin:0 auto; padding:22px 32px; display:flex; align-items:center; justify-content:space-between; gap:24px; }
+    .nav-left { font-size:18px; letter-spacing:0.06em; text-transform:uppercase; font-weight:500; }
+    .nav-right { display:flex; flex-wrap:wrap; gap:20px; font-size:14px; }
+    .nav-right a { opacity:0.75; border-bottom:1px solid transparent; padding-bottom:2px; transition:0.2s; }
+    .nav-right a:hover { opacity:1; border-color:var(--text); }
+    .nav-right a.resume { opacity:1; border-color:var(--line); padding:4px 10px 5px; border-radius:999px; border-width:1px; }
+    .nav-right a.resume:hover { border-color:var(--text); background:#111; }
+
+    .section { padding-top:80px; }
+    .section-header { padding-bottom:10px; border-bottom:1px solid var(--line); margin-bottom:40px; }
+    .section-label { font-size:12px; letter-spacing:0.16em; text-transform:uppercase; color:var(--muted); margin-bottom:8px; }
+    .section-title { font-size:26px; font-weight:500; }
+
+    .hero { padding:120px 0 40px; border-bottom:1px solid var(--line); }
+    .hero-inner { max-width:900px; }
+    .hero-intro { font-family:"Playfair Display",Georgia,"Times New Roman",serif; font-size:40px; font-weight:500; line-height:1.3; margin:0 0 18px; }
+    .hero-body { font-size:16px; color:var(--muted); max-width:640px; margin:0 0 10px; }
+
+    .video-block { margin-bottom:56px; max-width:900px; }
+    .video-heading { display:flex; justify-content:space-between; align-items:baseline; gap:16px; margin-bottom:8px; }
+    .video-title { font-size:20px; font-weight:500; }
+    .video-tag { font-size:12px; color:var(--muted); text-transform:uppercase; letter-spacing:0.14em; }
+    .video-frame { border-radius:6px; overflow:hidden; border:1px solid #161616; background:black; }
+    .video-frame iframe { width:100%; height:460px; border:none; }
+
+    .contact-inner { max-width:900px; }
+    .contact h2 { font-size:24px; font-weight:500; margin:0 0 10px; }
+    .contact a.email { font-size:18px; display:inline-block; margin-bottom:8px; border-bottom:1px solid var(--line); padding-bottom:3px; }
+    .contact a.email:hover { border-color:var(--text); }
+    .contact-note { font-size:14px; color:var(--muted); max-width:460px; margin-top:10px; }
+    .social-row { margin-top:26px; display:flex; flex-wrap:wrap; gap:18px; font-size:14px; }
+    .social-row a { color:var(--muted); border-bottom:1px solid transparent; padding-bottom:2px; transition:0.2s; }
+    .social-row a:hover { color:var(--text); border-color:var(--text); }
+    footer { padding-top:60px; font-size:12px; color:var(--muted); }
+
+    @media (max-width:900px){
+      .shell{padding:0 20px 60px;}
+      .nav-inner{padding:18px 20px;flex-direction:column;align-items:flex-start;}
+      .hero{padding-top:80px;}
+      .hero-intro{font-size:32px;}
+      .video-frame iframe{height:260px;}
     }
-    a {
-      color: #00aaff;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-    }
-    h1 {
-      text-align: center;
-      font-size: 32px;
-    }
-    .back-link {
-      margin-bottom: 20px;
-      display: inline-block;
-    }
-    .video {
-      margin-bottom: 40px;
-    }
-    iframe {
-      width: 100%;
-      height: 315px;
-      border: none;
-    }
-    .description {
-      margin-top: 10px;
-      font-size: 0.95em;
-      color: #ccc;
+    @media (max-width:600px){
+      .video-heading{flex-direction:column;align-items:flex-start;}
     }
   </style>
 </head>
 <body>
-<div class="container">
-<a class="back-link" href="index.html">← Back to Home</a>
-<h1>Narrative Work</h1>
-<div class="video">
-<iframe allowfullscreen="" src="https://www.youtube.com/embed/2n3UkWppLrk"></iframe>
-<p class="description">A fast-paced promotional montage created for a friend’s clothing brand, showcasing style, energy, and visual flair.</p>
-</div>
-<div class="video">
-<iframe allowfullscreen="" src="https://www.youtube.com/embed/vdfG4Zg7Hww"></iframe>
-<p class="description">A reflective short film exploring the overlooked moments and small details a character fails to appreciate—until they’re gone.</p>
-</div>
-<div class="video">
-<iframe allowfullscreen="" src="https://www.youtube.com/embed/eswpazPrw6k"></iframe>
-<p class="description">A stylized video illustrating the addictive nature of social media and its impact on attention span—drawing parallels to the fragmented focus of a fish brain in a digital world.</p>
-<div class="video">
-<iframe allowfullscreen="" src="https://www.youtube.com/embed/eqM_UiJUdAQ"></iframe>
-<p class="description">A visual montage following a lead character through a tapestry of faces and locations, capturing emotion, connection, and movement across space and time.</p>
-</div>
+  <nav>
+    <div class="nav-inner">
+      <div class="nav-left">Emir Alhariri</div>
+      <div class="nav-right">
+        <a href="index.html">Home</a>
+        <a href="narrative.html">Narrative</a>
+        <a href="corporate.html">Corporate</a>
+        <a href="sound.html">Sound</a>
+        <a href="photos.html">Photos</a>
+        <a href="#contact">Contact</a>
+        <a href="resume.pdf" target="_blank" class="resume">Resume</a>
+      </div>
+    </div>
+  </nav>
 
-</div>
-<div class="video"><iframe allowfullscreen="True" src="https://www.youtube.com/embed/lPBMXGOfdeA"></iframe><p class="description">Kelpie is a Norwegian horror short film I co-directed. I also contributed to the camera setup, lighting design, and sound during production.</p></div><div class="video">
-<iframe allowfullscreen="" src="https://www.youtube.com/embed/Zn1w953_mZA"></iframe>
-<p class="description">Shot during my time studying in Norway, this was a fast-paced collaborative project set in a local bar, highlighting our ability to plan and execute under time constraints.</p>
-</div></div></body>
+  <div class="shell">
+    <section class="hero">
+      <div class="hero-inner">
+        <h1 class="hero-intro">Narrative work.</h1>
+        <p class="hero-body">
+          Short films and scenes that focus on quiet drama, body language, and small shifts in emotion.
+        </p>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="section-header">
+        <div class="section-label">Films</div>
+        <div class="section-title">Selected narrative pieces</div>
+      </div>
+
+      <div class="video-block">
+        <div class="video-heading">
+          <div class="video-title">Night Windows</div>
+          <div class="video-tag">Narrative short</div>
+        </div>
+        <div class="video-frame">
+          <iframe src="https://www.youtube.com/embed/Yc9BXNKkexc" allowfullscreen></iframe>
+        </div>
+      </div>
+
+      <div class="video-block">
+        <div class="video-heading">
+          <div class="video-title">Mustard</div>
+          <div class="video-tag">Short film</div>
+        </div>
+        <div class="video-frame">
+          <iframe src="https://www.youtube.com/embed/hMhCHU_ikK0" allowfullscreen></iframe>
+        </div>
+      </div>
+    </section>
+
+    <section class="section contact" id="contact">
+      <div class="contact-inner">
+        <h2>Contact</h2>
+        <a href="mailto:alhaririemir@gmail.com" class="email">alhaririemir@gmail.com</a>
+        <p class="contact-note">
+          Reach out for narrative projects, crew positions, and collaborations.
+        </p>
+
+        <div class="social-row">
+          <a href="https://www.linkedin.com/in/emiralhariri" target="_blank">LinkedIn</a>
+          <a href="https://www.youtube.com/@scenesbyemir" target="_blank">YouTube</a>
+          <a href="https://www.instagram.com/emiralhariri" target="_blank">Instagram</a>
+          <a href="https://www.tiktok.com/@scenesbyemir" target="_blank">TikTok</a>
+        </div>
+
+        <footer>
+          © Emir Frantzen Alhariri.
+        </footer>
+      </div>
+    </section>
+  </div>
+</body>
 </html>
