--- a/index.html
+++ b/index.html
@@ -1,495 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Emir Frantzen Alhariri</title>
-
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet" />
-
-  <style>
-    :root {
-      --bg: #050505;
-      --text: #f5f5f5;
-      --muted: #b0b0b0;
-      --line: #222;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-      background: var(--bg);
-      color: var(--text);
-      font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, Inter, sans-serif;
-      line-height: 1.7;
-    }
-
-    a {
-      color: inherit;
-      text-decoration: none;
-    }
-
-    img {
-      max-width: 100%;
-      display: block;
-    }
-
-    .shell {
-      max-width: 1120px;
-      margin: 0 auto;
-      padding: 0 32px 80px;
-    }
-
-    /* NAV */
-
-    nav {
-      position: sticky;
-      top: 0;
-      z-index: 10;
-      background: rgba(5, 5, 5, 0.96);
-      backdrop-filter: blur(12px);
-      border-bottom: 1px solid rgba(255, 255, 255, 0.03);
-    }
-
-    .nav-inner {
-      max-width: 1120px;
-      margin: 0 auto;
-      padding: 22px 32px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 24px;
-    }
-
-    .nav-left {
-      font-size: 18px;
-      letter-spacing: 0.06em;
-      text-transform: uppercase;
-      font-weight: 500;
-    }
-
-    .nav-right {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      font-size: 14px;
-    }
-
-    .nav-right a {
-      opacity: 0.75;
-      border-bottom: 1px solid transparent;
-      padding-bottom: 2px;
-      transition: 0.2s;
-    }
-
-    .nav-right a:hover {
-      opacity: 1;
-      border-color: var(--text);
-    }
-
-    .nav-right a.resume {
-      opacity: 1;
-      border-color: var(--line);
-      padding: 4px 10px 5px;
-      border-radius: 999px;
-      border-width: 1px;
-    }
-
-    .nav-right a.resume:hover {
-      border-color: var(--text);
-      background: #111;
-    }
-
-    /* HERO */
-
-    .hero {
-      padding: 120px 0 40px;
-      border-bottom: 1px solid var(--line);
-    }
-
-    .hero-inner {
-      max-width: 900px;
-    }
-
-    .hero-intro {
-      font-family: "Playfair Display", Georgia, "Times New Roman", serif;
-      font-size: 44px;
-      font-weight: 500;
-      line-height: 1.3;
-      margin: 0 0 18px;
-    }
-
-    .hero-body {
-      font-size: 17px;
-      color: var(--muted);
-      max-width: 640px;
-      margin: 0 0 24px;
-    }
-
-    .hero-availability {
-      font-style: italic;
-      font-size: 15px;
-      color: #d7d7d7;
-    }
-
-    /* HERO IMAGE STRIP */
-
-    .hero-image {
-      padding: 60px 0 40px;
-      border-bottom: 1px solid var(--line);
-    }
-
-    .hero-image-frame {
-      max-width: 900px;
-      margin: 0;
-      overflow: hidden;
-      border-radius: 6px;
-      border: 1px solid #1b1b1b;
-    }
-
-    .hero-image-row {
-      display: grid;
-      grid-template-columns: 1.1fr 0.9fr;
-      gap: 4px;
-    }
-
-    .hero-image-row img {
-      height: 420px;
-      width: 100%;
-      object-fit: cover;
-    }
-
-    /* SECTION */
-
-    .section {
-      padding-top: 80px;
-    }
-
-    .section-header {
-      padding-bottom: 10px;
-      border-bottom: 1px solid var(--line);
-      margin-bottom: 40px;
-    }
-
-    .section-label {
-      font-size: 12px;
-      letter-spacing: 0.16em;
-      text-transform: uppercase;
-      color: var(--muted);
-      margin-bottom: 8px;
-    }
-
-    .section-title {
-      font-size: 26px;
-      font-weight: 500;
-    }
-
-    /* VIDEO BLOCKS */
-
-    .video-block {
-      margin-bottom: 56px;
-      max-width: 900px;
-    }
-
-    .video-heading {
-      display: flex;
-      justify-content: space-between;
-      align-items: baseline;
-      gap: 16px;
-      margin-bottom: 8px;
-    }
-
-    .video-title {
-      font-size: 20px;
-      font-weight: 500;
-    }
-
-    .video-tag {
-      font-size: 12px;
-      color: var(--muted);
-      text-transform: uppercase;
-      letter-spacing: 0.14em;
-    }
-
-    .video-frame {
-      border-radius: 6px;
-      overflow: hidden;
-      border: 1px solid #161616;
-      background: black;
-    }
-
-    .video-frame iframe {
-      width: 100%;
-      height: 460px;
-      border: none;
-    }
-
-    /* CATEGORIES */
-
-    .categories {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 16px;
-      margin-top: 28px;
-    }
-
-    .cat-link {
-      font-size: 14px;
-      padding: 9px 18px;
-      border-radius: 999px;
-      border: 1px solid #2a2a2a;
-      color: var(--muted);
-      transition: 0.2s;
-    }
-
-    .cat-link:hover {
-      border-color: var(--text);
-      color: var(--text);
-      background: #111;
-    }
-
-    /* CONTACT */
-
-    .contact-inner {
-      max-width: 900px;
-    }
-
-    .contact h2 {
-      font-size: 24px;
-      font-weight: 500;
-      margin: 0 0 10px;
-    }
-
-    .contact a.email {
-      font-size: 18px;
-      display: inline-block;
-      margin-bottom: 8px;
-      border-bottom: 1px solid var(--line);
-      padding-bottom: 3px;
-    }
-
-    .contact a.email:hover {
-      border-color: var(--text);
-    }
-
-    .contact-note {
-      font-size: 14px;
-      color: var(--muted);
-      max-width: 460px;
-      margin-top: 10px;
-    }
-
-    .social-row {
-      margin-top: 26px;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 18px;
-      font-size: 14px;
-    }
-
-    .social-row a {
-      color: var(--muted);
-      border-bottom: 1px solid transparent;
-      padding-bottom: 2px;
-      transition: 0.2s;
-    }
-
-    .social-row a:hover {
-      color: var(--text);
-      border-color: var(--text);
-    }
-
-    .contact-images {
-      margin-top: 40px;
-      display: flex;
-      gap: 18px;
-      flex-wrap: wrap;
-    }
-
-    .contact-images img {
-      flex: 1 1 260px;
-      border-radius: 6px;
-      border: 1px solid #161616;
-      object-fit: cover;
-      height: 220px;
-    }
-
-    footer {
-      padding-top: 60px;
-      font-size: 12px;
-      color: var(--muted);
-    }
-
-    /* RESPONSIVE */
-
-    @media (max-width: 900px) {
-      .shell {
-        padding: 0 20px 60px;
-      }
-
-      .nav-inner {
-        padding: 18px 20px;
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      .hero {
-        padding-top: 80px;
-      }
-
-      .hero-intro {
-        font-size: 34px;
-      }
-
-      .hero-image-row img {
-        height: 320px;
-      }
-
-      .video-frame iframe {
-        height: 260px;
-      }
-    }
-
-    @media (max-width: 600px) {
-      .hero-image-row {
-        grid-template-columns: 1fr;
-      }
-
-      .hero-image-row img {
-        height: 260px;
-      }
-
-      .video-heading {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-    }
-  </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Emir Frantzen Alhariri</title>
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+    <style>
+        :root {
+            --bg: #050505;
+            --text: #f5f5f5;
+            --muted: #bbbbbb;
+            --line: #222;
+            --accent: #f5d37a;
+        }
+
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            margin: 0;
+            background: var(--bg);
+            color: var(--text);
+            font-family: Inter, -apple-system, BlinkMacSystemFont, Helvetica Neue, Arial, sans-serif;
+        }
+
+        a {
+            color: inherit;
+            text-decoration: none;
+        }
+
+        img {
+            max-width: 100%;
+            display: block;
+        }
+
+        /* NAV BAR */
+        nav {
+            position: sticky;
+            top: 0;
+            z-index: 10;
+            background: rgba(5, 5, 5, 0.9);
+            backdrop-filter: blur(12px);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.03);
+            padding: 12px 32px;
+        }
+
+        nav .nav-inner {
+            max-width: 1160px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        nav .left {
+            font-weight: 600;
+            font-size: 1rem;
+            letter-spacing: 0.5px;
+        }
+
+        nav .right a {
+            margin-left: 26px;
+            font-size: 0.9rem;
+            color: var(--muted);
+        }
+
+        nav .right a:hover {
+            color: var(--text);
+        }
+
+        /* PAGE CONTAINER */
+        .shell {
+            max-width: 1160px;
+            margin: 0 auto;
+            padding: 32px 24px 80px;
+        }
+    </style>
 </head>
+
 <body>
-  <!-- NAV -->
-  <nav>
-    <div class="nav-inner">
-      <div class="nav-left">Emir Alhariri</div>
-      <div class="nav-right">
-        <a href="narrative.html">Narrative</a>
-        <a href="corporate.html">Corporate</a>
-        <a href="sound.html">Sound</a>
-        <a href="photos.html">Photos</a>
-        <a href="#contact">Contact</a>
-        <a href="resume.pdf" target="_blank" class="resume">Resume</a>
-      </div>
-    </div>
-  </nav>
 
-  <div class="shell">
-    <!-- HERO TEXT -->
-    <section class="hero">
-      <div class="hero-inner">
-        <h1 class="hero-intro">
-          My name is Emir Frantzen Alhariri. I am a filmmaker and cinematographer focused on intimate, grounded stories told through light, sound, and stillness.
+    <!-- NAV BAR -->
+    <nav>
+        <div class="nav-inner">
+            <div class="left">EMIR ALHARIRI</div>
+            <div class="right">
+                <a href="narrative.html">Narrative</a>
+                <a href="corporate.html">Corporate</a>
+                <a href="sound.html">Sound</a>
+                <a href="photos.html">Photos</a>
+                <a href="contact.html">Contact</a>
+                <a href="resume.pdf" target="_blank">Resume</a>
+            </div>
+        </div>
+    </nav>
+
+    <!-- MAIN CONTENT -->
+    <div class="shell" style="text-align:center; max-width:850px; margin:0 auto;">
+
+        <!-- HERO IMAGE ON TOP -->
+        <img src="photos/EMIR-44.jpg"
+             alt="Emir Alhariri portrait"
+             style="width:100%; max-width:780px; border-radius:6px; margin-bottom:40px;">
+
+        <!-- INTRO TEXT -->
+        <h1 style="font-size:2.8rem; font-weight:600; line-height:1.3; margin-bottom:25px; font-family:'Playfair Display', serif;">
+            My name is Emir Frantzen Alhariri. I am a filmmaker and cinematographer focused on intimate, grounded stories told through light, sound, and stillness.
         </h1>
-        <p class="hero-body">
-          I was born in Norway and grew up between Saudi Arabia, England, Bahrain, and Maryland. I am currently studying Electronic Media and Film at Towson University while working on narrative, corporate, and documentary style projects.
-        </p>
-        <div class="hero-availability">
-          I am available for freelance shoots, camera assisting, and collaborations.
-        </div>
-      </div>
-    </section>
 
-    <!-- HERO IMAGE STRIP -->
-    <section class="hero-image">
-      <figure class="hero-image-frame">
-        <div class="hero-image-row">
-          <img src="EMIR-44.jpg" alt="On set still one" />
-          <img src="EMIR-45.jpg" alt="On set still two" />
-        </div>
-      </figure>
-    </section>
-
-    <!-- FEATURED WORK -->
-    <section class="section">
-      <div class="section-header">
-        <div class="section-label">Featured work</div>
-        <div class="section-title">Selected pieces</div>
-      </div>
-
-      <div class="video-block">
-        <div class="video-heading">
-          <div class="video-title">Night Windows</div>
-          <div class="video-tag">Narrative short</div>
-        </div>
-        <div class="video-frame">
-          <iframe src="https://www.youtube.com/embed/Yc9BXNKkexc" allowfullscreen></iframe>
-        </div>
-      </div>
-
-      <div class="video-block">
-        <div class="video-heading">
-          <div class="video-title">Mustard</div>
-          <div class="video-tag">Short film</div>
-        </div>
-        <div class="video-frame">
-          <iframe src="https://www.youtube.com/embed/hMhCHU_ikK0" allowfullscreen></iframe>
-        </div>
-      </div>
-
-      <div class="video-block">
-        <div class="video-heading">
-          <div class="video-title">Active Listening PSA</div>
-          <div class="video-tag">PSA</div>
-        </div>
-        <div class="video-frame">
-          <iframe src="https://www.youtube.com/embed/pP0qQ_P_8Fc" allowfullscreen></iframe>
-        </div>
-      </div>
-    </section>
-
-    <!-- CATEGORIES -->
-    <section class="section">
-      <div class="section-header">
-        <div class="section-label">Portfolio</div>
-        <div class="section-title">Explore by category</div>
-      </div>
-
-      <div class="categories">
-        <a href="narrative.html" class="cat-link">Narrative</a>
-        <a href="corporate.html" class="cat-link">Corporate</a>
-        <a href="sound.html" class="cat-link">Sound</a>
-        <a href="photos.html" class="cat-link">Photos</a>
-      </div>
-    </section>
-
-    <!-- CONTACT -->
-    <section class="section contact" id="contact">
-      <div class="contact-inner">
-        <h2>Contact</h2>
-        <a href="mailto:alhaririemir@gmail.com" class="email">alhaririemir@gmail.com</a>
-        <p class="contact-note">
-          Reach out for freelance projects, assisting on set, or collaborations in the DMV area and beyond.
+        <p style="font-size:1rem; max-width:700px; margin:0 auto 20px; color:#ccc;">
+            I was born in Norway and grew up between Saudi Arabia, England, Bahrain, and Maryland. I am currently studying Electronic Media and Film at Towson University while working on narrative, corporate, and documentary style projects.
         </p>
 
-        <div class="social-row">
-          <a href="https://www.linkedin.com/in/emiralhariri" target="_blank">LinkedIn</a>
-          <a href="https://www.youtube.com/@scenesbyemir" target="_blank">YouTube</a>
-          <a href="https://www.instagram.com/emiralhariri" target="_blank">Instagram</a>
-          <a href="https://www.tiktok.com/@scenesbyemir" target="_blank">TikTok</a>
-        </div>
+        <p style="font-size:0.9rem; font-style:italic; color:#aaa;">
+            I am available for freelance shoots, camera assisting, and collaborations.
+        </p>
 
-        <div class="contact-images">
-          <img src="assets/contact/EMIR-46.jpg" alt="Contact still one" />
-          <img src="assets/contact/EMIR-47.jpg" alt="Contact still two" />
-        </div>
+        <hr style="margin:60px 0; border-color:#333;">
+    </div>
 
-        <footer>
-          © Emir Frantzen Alhariri. Built on GitHub Pages.
-        </footer>
-      </div>
-    </section>
-  </div>
+    <!-- BTS PRODUCTION STILL SECTION -->
+    <div class="shell" style="text-align:center; max-width:1200px; margin:0 auto;">
+        <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px;">
+
+            <img src="photos/EMIR-44.jpg"
+                 style="width:100%; max-width:550px; border-radius:6px;">
+
+            <img src="photos/EMIR-45.jpg"
+                 style="width:100%; max-width:550px; border-radius:6px;">
+
+        </div>
+    </div>
+
 </body>
 </html>
