--- a/photos.html
+++ b/photos.html
@@ -93,15 +93,16 @@
       </div>
 
       <div class="stills-grid">
-        <img src="EMIR-44.jpg" alt="Production still" />
-        <img src="photos/street-basketball.jpg" alt="Basketball court" />
-        <img src="EMIR-45.jpg" alt="Production still" />
-        <img src="photos/travel-church-walk.jpg" alt="Travel still" />
-        <img src="photos/street-balconies.jpg" alt="Street still" />
-        <img src="photos/street-alley-cat.jpg" alt="Cat in alley" />
-        <img src="photos/street-puddle-crossing.jpg" alt="Street crossing" />
-        <img src="photos/portrait-benjamin.jpg" alt="Portrait" />
-      </div>
+  <img src="EMIR-44.jpg" alt="Production still" />
+  <img src="street-basketball.jpg" alt="Basketball court" />
+  <img src="EMIR-45.jpg" alt="Production still" />
+  <img src="travel-church-walk.jpg" alt="Travel still" />
+  <img src="street-balconies.jpg" alt="Street still" />
+  <img src="street-alley-cat.jpg" alt="Cat in alley" />
+  <img src="street-puddle-crossing.jpg" alt="Street crossing" />
+  <img src="portrait-benjamin.jpg" alt="Portrait" />
+</div>
+
     </section>
 
     <section class="section contact" id="contact">
